--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
-    "snapblocks": "^1.1.1",
-    "snapblocks-react": "^1.0.0"
+    "snapblocks": "^1.1.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.1",
